[Test cases] change in test cases according to change in controllers and services